# memorygraph

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
.github/workflows/: backend.yml  deploy-frontend.yml  frontend.yml  pr-frontend.yml  release-backend.yml
api/: __init__.py  routes.py
chrome-extension/: generate-icons.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
core/: core.py
models/: __init__.py  content.py  record.py
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  main.py  pyproject.toml  requirements.txt
server/api/: routes.py
server/core/: __init__.py  core.py
server/models/: content.py
server/services/: chromadb.py  cohere.py  url_parser.py
services/: __init__.py  arangodb.py  cohere.py  record_service.py  url_parser.py
ui/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: SearchBar.tsx
ui/src/pages/: SearchPage.tsx
ui/src/services/: api-service.ts
utils/: utils.py
