[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorygraph"
version = "1.0.0"
description = "API for processing and storing content summaries"
authors = [
    {name = "Alen Koikkara", email = "alendennis@gmail.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "arango",
    "pydantic",
    "python-dotenv",
    "cohere",
    "chromadb",
    "numpy",
    "faiss-cpu"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"] 